--- a/web/index.html
+++ b/web/index.html
@@ -68,7 +68,7 @@
 				<div class="form-group maker_sensor">
 					<div class="col-xs-3 col-xs-offset-4"><input type="text" class="form-control maker_sensor-input" placeholder="Ex: 72"></div>
 					<div class="col-xs-3">
-						<select class="form-control maker_sensor-select">
+						<select class="form-control maker_sensor-select" title="type">
 		                    <option value="default"></option>
 		                    <option value="column">Column</option>
 		                    <option value="bar">Bar</option>
