--- a/web/index.html
+++ b/web/index.html
@@ -69,11 +69,9 @@
 					<div class="col-xs-3 col-xs-offset-4"><input type="text" class="form-control maker_sensor-input" placeholder="Ex: 72"></div>
 					<div class="col-xs-3">
 						<select class="form-control maker_sensor-select" title="type">
-		                    <option value="default"></option>
-		                    <option value="column">Column</option>
-		                    <option value="bar">Bar</option>
-		                    <option value="binary">Binary</option>
-		                    <option value="line">Line</option>
+		                    <option value="l">Line</option>
+		                    <option value="c">Column</option>
+		                    <option value="b">Binary</option>
 						</select>
 					</div>
 					<div data-toggle="tooltip" title="Add a new Sensor" class="col-xs-1"><div class="add-sensor btn btn-default glyphicon glyphicon-plus"></div></div>
