--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
 	<title>URL Maker</title>
     <meta charset="UTF-8">
 
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<!-- JS Dependencies -->
-	<script type="text/javascript" src="../dependencies/jquery-min.js"></script>
-	<script type="text/javascript" src="../dependencies/momentJS/moment.min.js"></script>
-	<script type="text/javascript" src="../dependencies/momentJS/fr.js"></script>
-	<script type="text/javascript" src="../dependencies/bootstrap/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="../dependencies/bootstrap/js/bootstrap-datetimepicker.min.js"></script>
-    <script src="../dependencies/clipboard.min.js"></script>
+	<script type="text/javascript" src="dependencies/jquery-min.js"></script>
+	<script type="text/javascript" src="dependencies/momentJS/moment.min.js"></script>
+	<script type="text/javascript" src="dependencies/momentJS/fr.js"></script>
+	<script type="text/javascript" src="dependencies/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="dependencies/bootstrap/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="dependencies/clipboard.min.js"></script>
 
 	<!-- CSS Dependencies -->
-	<link rel="stylesheet" type="text/css" href="../dependencies/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../dependencies/bootstrap/css/bootstrap-datetimepicker.css">
+	<link rel="stylesheet" type="text/css" href="dependencies/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="dependencies/bootstrap/css/bootstrap-datetimepicker.css">
 
     <!-- Class JS -->
-    <script type="text/javascript" src="../js/prototype.js"></script>
-    <script type="text/javascript" src="../js/CookieManager.js"></script>
-    <script type="text/javascript" src="../js/PageBuilder.js"></script>
-    <script type="text/javascript" src="../js/DisplayManager.js"></script>
-    <script type="text/javascript" src="../js/QueryMaker.js"></script>
+    <script type="text/javascript" src="js/prototype.js"></script>
+    <script type="text/javascript" src="js/CookieManager.js"></script>
+    <script type="text/javascript" src="js/PageBuilder.js"></script>
+    <script type="text/javascript" src="js/DisplayManager.js"></script>
+    <script type="text/javascript" src="js/QueryMaker.js"></script>
 
 
     <!-- Main Script JS -->
-    <script type="text/javascript" src="../js/main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 
 </head>
 <body>
